@@ -1,3 +1,8 @@
+2020-06-16 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/bug-2368.c:
+	  Fix bug #3063.
+
 2020-06-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/hc08/ralloc.c: Fix bug #3061
